[project]
name = "qc-amplitudes"
version = "0.1.0"
description = "From-scratch preparation of 2- and 3-qubit state vectors from complex amplitudes."
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
